Set the control bar css to fixed. Results in odd behavior when at certian resolutions when multiple cards overflow with a scroll bar.

--- a/console/css/custom.css
+++ b/console/css/custom.css
@@ -1059,7 +1059,7 @@ ion-icon {
 ********************************/
 
 #controlbar {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     height: 60px;
     width: 100%;
